--- a/src/components/ChatBox/chatbox.module.css
+++ b/src/components/ChatBox/chatbox.module.css
@@ -42,23 +42,11 @@
     color: #333;
 }
 
-.inputWrapper {
-    width: 50%;
-    box-sizing: border-box;
-    display: flex;
-}
-
-.inputWrapper input {
-    flex-grow: 3;
-    font-size: 1.4em;
-    line-height: 2em;
-    padding: 0px 12px;
-}
-
-.inputWrapper button {
+.button {
     flex-grow: 1;
     background-color: #00f;
     color: #fff;
     font-weight: bold;
     border: none;
+    cursor: pointer;
 }
